version/0.19/_sources/api/solver/_autosummary/settings/cathode_ds.rst.txt
:orphan:

.. _cathode_ds:

cathode_ds
==========

.. autoclass:: ansys.fluent.core.solver.settings_241.cathode_ds.cathode_ds
    :show-inheritance:

.. rubric:: Attributes

==================================   ===================================

Attribute                                                        Summary

==================================   ===================================
:ref:`method <method_4>`                 Select method for the property.

:ref:`value <value_1>`                                    'value' child.

:ref:`user_defined <user_defined>`                 'user_defined' child.

==================================   ===================================

.. rubric:: Included in:

==============================================   ===============================

Parent                                                                   Summary

==============================================   ===============================
:ref:`p2d_model_settings <p2d_model_settings>`       'p2d_model_settings' child.

==============================================   ===============================

